--- a/pokeapi/pokemon_hakusovellus.html
+++ b/pokeapi/pokemon_hakusovellus.html
@@ -4,6 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon hakusovellus</title>
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center; /* Centers horizontally */
+            align-items: flex-start; /* Aligns everything at the top */
+
+            font-family: Arial, sans-serif;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 20px;
+        }
+
+        h1 {
+            margin-bottom: 20px;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+        }
+
+        input {
+            width: 200px;
+            padding: 5px;
+            font-size: 1rem;
+        }
+
+        button {
+            padding: 5px 10px;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+
+        #pokemonTiedot {
+            margin-top: 20px;
+            padding: 10px;
+            background-color: rgb(98, 250, 67);
+            color: white;
+            border-radius: 10px;
+            text-align: center;
+            width: 100%;
+            max-width: 400px;
+        }
+
+        img {
+            margin-top: 10px;
+            background-color: rgb(87, 86, 86);
+            border-radius: 10px;
+        }
+    </style>
 </head>
 <body>
     <h1>Pokemon hakusovellus</h1>
