--- a/Peli/miinaharava.html
+++ b/Peli/miinaharava.html
@@ -9,10 +9,35 @@
 </head>
 <body>
     <h1>Mines: <span id="mines-count">0</span></h1>
+    <form action="miinaharava.html">
+        <!--
+            Input rivien määrälle
+        -->
+        <label for="rows">Number of rows:</label>
+        <input type="text" id="rows" value="10">
+        <br>
+        <!--
+            Input pysty rivien määrälle
+        -->
+        <label for="columns">Number of columns:</label>
+        <input type="text" id="columns" value="10">
+        <!--
+            Input miinojen määrälle
+        -->
+        <br>
+        <label for="mines">Number of mines:</label>
+        <input type="text" value="10">
+        <!--
+            Input muutosten teolle
+        -->
+        <br>
+        <input type="submit" value="Commit changes">
+    </form>
     <div id="board">
         
     </div>
     <br>
     <button id="flag-button">🚩</button>
+    <Button id="restart-button"><a onClick="window.location.reload()">🔃</a></Button>
 </body>
 </html>
