--- a/Peli/miinaharava.html
+++ b/Peli/miinaharava.html
@@ -4,41 +4,147 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Miinaharava</title>
-    <link rel="icon" href="OIF.jpg">
+    <link rel="icon" href="sivun_icon.png">
     <link rel="stylesheet" href="miinaharava.css">
     <script src="miinaharava.js"></script>
 </head>
 <body>
-    <img src="asteikko.png" alt="">
-    <h1>Mines: <span id="mines-count">0</span></h1>
-    <form id="settings-form" action="miinaharava.html">
-        <!--
-            Input rivien määrälle
-        -->
-        <label for="rows">Number of rows:</label>
-        <input type="text" id="rows" value="8">
-        <br>
-        <!--
-            Input pysty rivien määrälle
-        -->
-        <label for="columns">Number of columns:</label>
-        <input type="text" id="columns" value="8">
-        <!--
-            Input miinojen määrälle
-        -->
-        <br>
-        <label for="mines">Number of mines:</label>
-        <input type="text" id="mines" value="10">
-        <!--
-            Input muutosten teolle
-        -->
-        <br>
-        <input id="changes-button" type="submit" value="Commit changes">
-    </form>
-    <button id="flag-button">🚩</button>
-    <Button id="restart-button"><a onClick="clearboard()">🔃</a></Button>
-    <div id="board">
+    <h1>Minesweeper</h1>
+    <h2>Mines: <span id="mines-count">0</span></h1>
+    <div id="grid-container">
+        <div id="oikea" class="grid-item">
+            <form id="settings-form" action="miinaharava.html">
+                <!--
+                    Input rivien määrälle
+                -->
+                <label for="rows">Number of rows:</label>
+                <input type="text" id="rows" value="8">
+                <br>
+                <!--
+                    Input pysty rivien määrälle
+                -->
+                <label for="columns">Number of columns:</label>
+                <input type="text" id="columns" value="8">
+                <!--
+                    Input miinojen määrälle
+                -->
+                <br>
+                <label for="mines">Number of mines:</label>
+                <input type="text" id="mines" value="10">
+                <!--
+                    Input muutosten teolle
+                -->
+                <br>
+                <input id="changes-button" type="submit" value="Commit changes">
+            </form>
+            <button id="flag-button">🚩</button>
+            <button onClick="clearboard()" id="restart-button">🔃</button>
+        </div>
+        <div id="board" class="grid-item">
         
+        </div>
+        <div id="vasen" class="grid-item">
+            <table>
+                <tr>
+                    <th>Difficulty</th>
+                    <th>Size</th>
+                    <th>Cells</th>
+                    <th>Mines</th>
+                    <th>Density</th>
+                </tr>
+                <tr>
+                    <th>Easy #1</th>
+                    <th>8x8</th>
+                    <th>64</th>
+                    <th>10</th>
+                    <th>15.6%</th>
+                </tr>
+                <tr>
+                    <th>Easy #2</th>
+                    <th>9x9</th>
+                    <th>81</th>
+                    <th>10</th>
+                    <th>12.3%</th>
+                </tr>
+                <tr>
+                    <th>Easy #3</th>
+                    <th>10x10</th>
+                    <th>100</th>
+                    <th>10</th>
+                    <th>10.0%</th>
+                </tr>
+                <tr>
+                    <th>Easy avarage</th>
+                    <th>n/a</th>
+                    <th>n/a</th>
+                    <th>10</th>
+                    <th>12.6%</th>
+                </tr>
+                <tr>
+                    <th>Intermediate #1</th>
+                    <th>13x15</th>
+                    <th>195</th>
+                    <th>40</th>
+                    <th>20.5%</th>
+                </tr>
+                <tr>
+                    <th>Intermediate #2</th>
+                    <th>13x16</th>
+                    <th>208</th>
+                    <th>40</th>
+                    <th>19.2%</th>
+                </tr>
+                <tr>
+                    <th>Intermediate #3</th>
+                    <th>14x15</th>
+                    <th>210</th>
+                    <th>40</th>
+                    <th>19.0%</th>
+                </tr>
+                <tr>
+                    <th>Intermediate #4</th>
+                    <th>14x16</th>
+                    <th>224</th>
+                    <th>40</th>
+                    <th>17.9%</th>
+                </tr>
+                <tr>
+                    <th>Intermediate #5</th>
+                    <th>15x15</th>
+                    <th>225</th>
+                    <th>40</th>
+                    <th>17.8%</th>
+                </tr>
+                <tr>
+                    <th>Intermediate #6</th>
+                    <th>15x16</th>
+                    <th>240</th>
+                    <th>40</th>
+                    <th>16.7%</th>
+                </tr>
+                <tr>
+                    <th>Intermediate #7</th>
+                    <th>16x16</th>
+                    <th>256</th>
+                    <th>40</th>
+                    <th>15.6%</th>
+                </tr>
+                <tr>
+                    <th>Intermediate avarage</th>
+                    <th>n/a</th>
+                    <th>n/a</th>
+                    <th>40</th>
+                    <th>18.1%</th>
+                </tr>
+                <tr>
+                    <th>Expert</th>
+                    <th>16x30</th>
+                    <th>480</th>
+                    <th>99</th>
+                    <th>20.6%</th>
+                </tr>
+            </table>
+        </div>
     </div>
 </body>
 </html>
