miinaharavaa paranneltu lisää

--- a/Peli/miinaharava.html
+++ b/Peli/miinaharava.html
@@ -143,6 +143,17 @@
                     <th>99</th>
                     <th>20.6%</th>
                 </tr>
+                <table style="margin-top: 6px;">
+                    <tr>
+                        <th>Press <strong>"f"</strong> to equip the flag</th>
+                    </tr>
+                    <tr>
+                        <th>Press <strong>"r"</strong> to reset the board</th>
+                    </tr>
+                    <tr>
+                        <th>Press <strong>"c"</strong> to clear the board</th>
+                    </tr>
+                </table>
             </table>
         </div>
     </div>
